Prevent long artist or track title from wrapping

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
 #rooms-list .artist-name, #rooms-list .track-title {
   display: block;
   font-size: 14px;
+  white-space: nowrap;
 }
 
 #rooms-list .album-art {
